jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    # Need some more time debugging the client to disable privileged!
    #pod-security.kubernetes.io/enforce: baseline
    #pod-security.kubernetes.io/enforce-version: latest

    # We are setting these to our _desired_ `enforce` level.
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
