jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: mediaserver
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: mario
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /srv/share/backed/appdata/jellyfin/
            type: Directory
        - name: media-data
          hostPath:
            path: /srv/share/media/
            type: Directory
      containers:
        - image: jellyfin/jellyfin:10.9.4
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1004
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
          name: jellyfin
          volumeMounts:
            - mountPath: "/config"
              name: jellyfin-config
            - mountPath: "/data"
              name: media-data
              readOnly: true
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: jellyfin-mpv
  name: jellyfin-mpv
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin-mpv
  template:
    metadata:
      labels:
        app: jellyfin-mpv
    spec:
      tolerations:
      - key: ongy.net/htpc
        operator: Exists
        effect: NoSchedule
      terminationGracePeriodSeconds: 5
      serviceAccountName: jellyfin-mpv-log-reader
      nodeSelector:
        graphics: wayland
      securityContext:
        supplementalGroups: [110, 992]
      volumes:
        - name: tmp-dir
          emptyDir:
            medium: Memory
            sizeLimit: 500Mi
        - name: user-run
          hostPath:
            path: "/run/user/1000/"
            type: Directory
        - name: config-home
          hostPath:
            path: "/home/ongy/.config/jellyfin-mpv-shim/"
            type: Directory
        - name: x11-unix
          hostPath:
            path: "/tmp/.X11-unix/"
            type: Directory
        - name: kube-root-ca
          configMap:
            name: kube-root-ca.crt
      containers:
        - image: cr.local.ongy.net/jellyfin-mpv-shim:20241226
          command:
          - /bin/sh
          - -c
          - env XAUTHORITY=`find $XDG_RUNTIME_DIR -type f -name \*mutter-Xwaylandauth\*` /usr/local/bin/jellyfin-mpv-shim
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            privileged: true
          name: jellyfin-mpv
          volumeMounts:
            - mountPath: "/run/user/1000"
              name: user-run
            - mountPath: "/home/jellyfin/.config/jellyfin-mpv-shim"
              name: config-home
            - mountPath: "/tmp/.X11-unix/"
              name: x11-unix
            - mountPath: "/tmp/"
              name: tmp-dir
            - mountPath: "/etc/kube-ca.crt"
              name: kube-root-ca
              subPath: ca.crt
