jellyfin/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: mediaserver
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      name: http
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: jellyfin
#   namespace: mediaserver
# spec:
#   podSelector:
#     matchLabels:
#       app: jellyfin
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: jellyfin
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: homeassistant
#       ports:
#         - protocol: TCP
#           port: 8096
#   # Allow egress to outside (track etc.)
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               kubernetes.io/metadata.name: kube-system
#       ports:
#         - protocol: UDP
#           port: 53
#     - to:
#         - ipBlock:
#             cidr: 0.0.0.0/0
#             except:
#               - 10.0.0.0/8
#               - 192.168.0.0/16
#       ports:
#         - protocol: TCP
#           port: 80
#         - protocol: TCP
#           port: 443
---
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: jellyfin-mpv
#  namespace: jellyfin
#spec:
#  podSelector:
#    matchLabels:
#      app: jellyfin-mpv
#  policyTypes:
#    - Ingress
#    - Egress
#  egress:
#    - to:
#        - podSelector:
#            matchLabels:
#              app: jellyfin
#      ports:
#        - protocol: TCP
#          port: 8096
#    - to:
#        - namespaceSelector:
#            matchLabels:
#              kubernetes.io/metadata.name: kube-system
#      ports:
#        - protocol: UDP
#          port: 53
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: mediaserver
spec:
  hostnames:
    - jellyfin.local.ongy.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
